# CongressTracker

./: .gitignore  DataGet.py  HousePreD.py  Pipfile  README.md  SenatePreD.py  app.py  dataExtract.py  environment.yml  manual.py  pyproject.toml  sessionGrab.sh  sqldata.py  validation.py
