[tool.poetry]
name = "congress fund"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode=false


[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.2"
pdfplumber = "^0.9.0"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
